<resources>
    <string name="app_name">PlayGround</string>
    <string name="action_settings">Settings</string>
    <string name="dummy_section_text">Section %1d is just a dummy section.</string>

    <string name="demo_external_activity">Demo External Activity</string>
    <string name="demo_collection">Demo Collection</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>

    <string name="hello_world">Hello world!</string>
    <string name="progress_dialog">Loading</string>
    <string name="internet_error">Internet is not working.</string>

    <!-- Home Activity -->
    <string name="title_activity_main">Home</string>
    <string name="search_hint">Search By Name</string>
    <string name="btn_loadmore">Load More</string>
    <string name="error_dialog_text">Sorry,We could not find more data.</string>
    <string name="btn_home">Home</string>
    <string name="btn_category">Category</string>
    <string name="btn_favourite">Favourite</string>
    <string name="btn_featured">Featured</string>
    <string name="btn_news">News</string>
    <string name="btn_addstore">Add Store</string>
    <string name="btn_aboutus">About Us</string>
    <string name="btn_termscondition">Terms and Conditions</string>
    <string name="btn_login">Login</string>
    <string name="btn_review">Review</string>
    <string name="btn_gmap">Map</string>
    <string name="btn_profile">Profile</string>
    <string name="btn_register">Register</string>

    <!-- Category -->
    <string name="title_activity_category">Category</string>

    <!-- Favorites -->
    <string name="title_activity_favourite">Favourite</string>
    <string name="error_fav_not_found">No Favourite Found</string>
    <string name="km_sufix">Km</string>

    <!-- Featured -->
    <string name="title_activity_featured">Featured</string>

    <!-- News -->
    <string name="title_activity_news">News</string>

    <!-- Add Store -->
    <string name="title_activity_addstore">Add Store</string>

    <!-- About us -->
    <string name="title_activity_about">About Us</string>
    <string name="aboutparagraph1">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</string>
    <string name="aboutparagraph2">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."</string>
    <string name="aboutparagraph3">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. "</string>
    <string name="aboutparagraph4">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</string>
    <string name="aboutparagraph5">Nam liber te conscient to factor tum poen legum odioque civiuda.</string>

    <!-- Terms and Conditions -->
    <string name="title_activity_terms">Terms and Conditions</string>
    <string name="termparagraph1">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</string>
    <string name="termparagraph2">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."</string>
    <string name="termparagraph3">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. "</string>
    <string name="termparagraph4">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</string>
    <string name="termparagraph5">Nam liber te conscient to factor tum poen legum odioque civiuda.</string>

    <!-- Login -->
    <string name="title_activity_login">Login</string>
    <string name="or_text">OR</string>
    <string name="hint_usermailid">Email Address</string>
    <string name="hint_Password">Password</string>
    <string name="btn_login1">Login</string>
    <string name="btn_register1">Register</string>

    <!-- Register -->
    <string name="title_activity_register">Register</string>
    <string name="txt_edit">Edit</string>
    <string name="hint_fullname">Fullname</string>
    <string name="hint_email">Email ID</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_register2">Register</string>
    <string name="error_duplicate_email">This email id or username is already exists.. try another new email id or username for registration</string>

    <!-- Review -->
    <string name="title_activity_review">Review</string>
    <string name="dialog_description">Thank you for your feedback</string>
    <string name="dialog_title">Thanks</string>
    <string name="error_required_registration">You have to Register to add Review..</string>
    <string name="error_add_review">Be the first one to add review..</string>

    <!-- Map -->
    <string name="title_activity_gmap">Map</string>

    <!-- Profile -->
    <string name="title_activity_profile">Profile</string>

    <!-- Splash -->
    <string name="title_activity_splash">Splash</string>

    <!-- Detail Page -->
    <string name="title_activity_detailpage">Detail Page</string>
    <string name="txt_availableat">Available At</string>
    <string name="txt_totoal_review">total review</string>
    <string name="pref_about_application">ABOUT APPLICATION</string>
    <string name="pref_version_summary">1.0</string>
    <string name="pref_version">Version</string>
    <string name="pref_about_developer">ABOUT DEVELOPER</string>
    <string name="app_recipient">admin@redixbit.com</string>
    <string name="pref_contact_app">Contact Us</string>
    <string name="pref_contact_app_summary">For more information contact us.</string>
    <string name="app_subject">Restaurant</string>
    <string name="email_no_client">No email client installed.</string>
    <string name="email_choose_from_client">Choose an email client from...</string>

    <!-- ads detail  how can we delete it? it makes problems if deleted -->
    <string name="insertial_ad_key">ca-app-pub-3730886167471578/1104021244</string>
    <string name="bannerads">yes</string>
    <string name="insertialads">yes</string>
    <string name="link">http://storefinder.freaktemplate.com/</string>
    <string name="facebook_app_id">1609067259420394</string>
    <string name="server_client_id">926673907627-saeohu143i5q8heicuvkhtfjifm560tk.apps.googleusercontent.com</string>

    <!-- Strings related to Settings -->

    <!-- Setting Page -->

    <!-- Strings related to Settings -->
    <!-- Example General settings -->
    <string name="setting_name">Setting</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_events_recommendations">Recommendations</string>
    <string name="pref_description_social_recommendations">Personal Recommended events,
        based on your Favourites and filters </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_notifications_frequency">Notifications frequency</string>
    //
    <string-array name="pref_example_list_titles">
        <item>today</item>
        <item>this week</item>
        <item>this month</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

   <!--types array for the filter-->
    <string-array name="types_titles">
        <item>Football</item>
        <item>Basketball</item>
        <item>Running</item>
        <item>Gym</item>
        <item>Tennis</item>
    </string-array>
    <string-array name="types_values">
        <item>football</item>
        <item>basketball</item>
        <item>Running</item>
        <item>gym</item>
        <item>tennis</item>
    </string-array>

    <!--distance options for the filter -->
    <string-array name="distance_titles">
        <item>Walking distance (up to 2 km)</item>
        <item>Local area (up to 10 km)</item>
        <item>Over 10 km</item>
    </string-array>
    <string-array name="distance_values">
        <item>Walking distance (up to 2 km)</item>
        <item>Local area (up to 10 km)</item>
        <item>Over 10 km</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>1 minutes</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_reminders_notifications">Reminders</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_fragment">fragmentActivity</string>
    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="registering_message">Generating InstanceID token...</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>
    <string name="menu_settings">Settings</string>
    <string name="str_hnt_autocomplete">Enter Country Name</string>

    <string name="txtUrlApp"><a href="http://milysportbuddies.wix.com/playground">PlayGround Web</a></string>
</resources>
